test/fail/implicit-stable-pattern.mo
persistent actor {
   let (x,y) = (1,2) // illegal implicit stable pattern
}
